criacao das paginas deletar e listar agendamentos, da pagina de logout

--- a/novo-cliente.html
+++ b/novo-cliente.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index.php">Home</a>
+                    <a class="nav-link" href="./paginaInicial.php">Home</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="./novo-cliente.html">Cadastrar Cliente</a>
